assets/scss/custom.scss
:root {
  --light: #fff;
  --theme: #E77E5B;
  --haze: #f7f7f7;
  --text: #343434;
	--color-mode: "light";
	--light: #fff;
	--dark: #1c1c1e;
	--bubble: #242426;
	--accent: var(--haze);
	--bg: var(--light);
	--code-bg: var(--accent);
	--overlay: var(--light);
	--border-color: #eee;
	--inline-color: darkgoldenrod;
	--ease: ease;
  --link: #3176d9;
}

.button {
  background: var(--haze);
  padding: 0.25rem 1.25rem;
  border-radius: 2.5rem;
  cursor: pointer;
  display: inline-block;
  margin: 0 1.25rem 1.25rem 0;
  text-align: center;
  position: relative;
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  text-overflow: ellipsis;
  &::after {
    content: "+";
    font-size: 0.84rem;
    font-weight: bold;
    background: var(--theme);
    color: var(--haze);
    border-radius: 50%;
    transform-origin: 50% 50%;
    transform: rotate(45deg) translateX(0.33rem) translateY(-0.33rem);
    width: 1rem;
    height: 1rem;
    display: inline-flex;
    justify-content: center;
    align-items: center;
  }
  &_filter {
    user-select: none;
  }
  &_clear {
    background: var(--light);
  }

}
.hidden {
  display: none !important;
}
.button.active {
  background: var(--theme);
  color: var(--light);
}
.filter {
  width: 100%;
  padding: 0.25rem 1.5rem;
  position: relative;
  cursor: pointer;
  text-transform: capitalize;
  &:empty {
    display: none;
  }
  &::before, &::after {
    content: "";
    position: absolute;
    // border-radius: 50%;
    transform: translateY(0.15rem);
  }
  &::before {
    border: 2px solid var(--theme);
    width: 1rem;
    height: 1rem;
    left: 0;
    top: 0.25rem;
  }
  &::after {
    width: 0.5rem;
    height: 0.5rem;
    left: 0.25rem;
    top: 0.5rem;
  }
  &.active::after {
    background: var(--theme);
  }
  &_type {
    margin-bottom: 1rem;
  }
  &_type.passive {
    opacity: 0.25;
  }
  &s_applied {
    min-height: 1.5rem;
    margin-bottom: 1rem;
    // display: flex;
    // flex-flow: row wrap;
    // max-width: 1024px;
    overflow: auto;
    grid-column: 1/-1;
    // &:empty {
    //   display: none;
    // }
  }
  &s_results {
    display: flex;
    // margin-bottom: -2.5rem;
    align-items: center;
    min-width: 15rem;
    @media screen and (max-width: 768px) { 
      margin-bottom: 0;
    }
  }
  &s_results span {
    background: var(--theme);
    display: inline-flex;
    justify-content: center;
    align-items: center;
    height: 1.5rem;
    width: 3.5rem;
    border-radius: 1.25rem;
    color: var(--light);
    margin-right: 0.375rem;
    font-size: 0.84rem;
  }
}
.policy {
  text-decoration: none;
  color: var(--text) !important;
  display: block;
  margin-bottom: 2.25rem;
  &_actions {
    display: grid;
    grid-template-columns: 6rem 1fr;
    grid-gap: 1rem;
    @media screen and (max-width: 557px) { 
      margin-top: -4rem;
    }
  }
  &_filters {
    @media screen and (max-width: 768px) {
      position: fixed;
      transform: translateX(-100vw);
      z-index: 5;
      background: var(--light);
      top: 80px;
      left: 1rem;
      bottom: 1.5rem;
      padding: 1rem;
      border-radius: 0.5rem;
      &.active {
        box-shadow: 0 1rem 4rem rgba(0,0,0,0.08);
        transform: translateX(0);
      }
    }
  }
  &_grid {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-gap: 2rem;
    max-width: 1440px;
    margin: 6rem auto;
    padding: 1.5rem;
    @media screen and (min-width: 1920px) {
      margin: 7rem 1.5rem;
    }
    @media screen and (max-width: 768px) { 
      grid-template-columns: 1fr;
      max-width: 100vw;
    }
    @media screen and (max-width: 557px) { 
      margin: 5rem auto;
    }
  }
  &_page &_wrap {
    padding-top: 1.25rem;
    @media screen and (max-width: 557px) {
      padding-top: 2.5rem;
      h1 {
        padding-top: 1rem;
      }
    }
    > * {
      max-width: 100%;
    }
  }
  &_page {
    margin-top: 6rem;
    @media screen and (max-width: 557px) {
      margin-top: -4rem;
    }
  }
  &_toggle {
    position: relative;
    padding-left: 1.25rem;
    line-height: 1rem;
    user-select: none;
    cursor: pointer;
    display: none;
    @media screen and (max-width: 768px) {
      display: flex;
      // align-items: center;
      min-height: 1rem;
    }
    span {
      width: 1rem;
      height: 0.6rem;
      left: 0;
      top: 0.2rem;
      bottom: 0.2rem;
      display: inline-flex;
      align-items: center;
      justify-content: space-between;
      flex-flow: column;
      transform-origin: 50% 50%;
      transform: rotate(180deg);
      &, &::before, &::after {
        position: absolute;
        border-bottom: 2px solid var(--theme);
      }
      &::before, &::after {
        content: "";
        height: 2px;
      }
      &::before {
        width: 0.33rem;
      }
      &::after {
        width: 0.67rem;
        top: 50%;
      }
    }
  }
  &_wrap {
    @media screen and (max-width: 768px) {
      order: 3;
    }
    .td-page-meta {
      display: grid;
      grid-gap: 0.5rem;
    }
  }
  &_title {
    color: var(--link) !important;
  }
}

// syntax

@keyframes pulse {
	0% {
		opacity: 1;
	}

	75% {
		opacity: 0.1;
	}

	100% {
		opacity: 1;
	}
}

code {
	font-size: 15px;
	font-weight: 400;
	overflow-y: hidden;
	font-family: 'Monaco', monospace;
	word-break: break-all;
}

.highlight code {
  display: block;
}

code.noClass {
	color: var(--inline-color);
	display: inline;
	line-break: anywhere;
}

.windows .highlight {
	overflow-x: hidden;
}

.windows .highlight:hover {
	overflow-x: auto;
}

.highlight {
	display: grid;
	width: 100%;
	border-radius: 0 0.2rem 0.2rem 0;
	overflow-x: auto;
	position: relative;
}

.highlight_wrap {
	display: grid;
	background: var(--code-bg) !important;
	border-radius: 0.5rem;
	position: relative;
	padding: 0 1rem;
	margin: 2.5rem auto 1rem auto;
  .highlight_wrap {
    padding: 0;
    margin: 0;
  }
}

.highlight_wrap + .highlight_wrap {
	margin-top: 2.25rem;
}

.highlight_wrap:hover > div {
	opacity: 1;
}

.highlight_wrap .lang {
	position: absolute;
	top: 0;
	right: 0;
	text-align: right;
	width: 7.5rem;
	padding: 0.5rem 1rem;
	font-style: italic;
	text-transform: uppercase;
	font-size: 67%;
	opacity: 0.5;
	color: var(--text);
}

.highlight_wrap:hover .lang {
	opacity: 0.1;
}

.highlight .highlight {
	margin: 0;
}

.highlight pre {
	color: var(--text) !important;
	border-radius: 4px;
	font-family: 'Monaco', monospace;
	padding-top: 1.5rem;
	padding-bottom: 2rem;
  overflow: initial;
  display: initial;
  margin: 0;
}

.highlight table {
	display: grid;
	max-width: 100%;
	margin-bottom: 0;
	background: transparent;
}

.highlight td, .highlight th {
	padding: 0;
}

.highlight .lntd {
	width: 100%;
	border: none;
}

.highlight .lntd:first-child, .highlight .lntd:first-child pre {
	width: 2.5rem !important;
	padding-left: 0;
	padding-right: 0;
	color: rgba(255, 255, 255, 0.5);
	user-select: none;
}

.highlight .lntd:first-child pre {
	width: 100%;
	display: flex;
	align-items: center;
	flex-direction: column;
}

.err {
	color: #a61717;
}

.hl {
	width: 100%;
	background: var(--inline-color);
}

.ln, .lnt {
	margin-right: 0.75rem;
	padding: 0;
	transition: opacity 0.3s var(--ease);
}

.ln, .ln span, .lnt, .lnt span {
	color: var(--text);
	opacity: 0.5;
	user-select: none;
}

.k, .kc, .kd, .kn, .kp, .kr, .kt, .nt {
	color: #6ab825;
  color: #447fcf;
	font-weight: 500;
}

.kn, .kp {
	font-weight: 400;
}

.nb, .no, .nv {
	color: #24909d;
}

.nc, .nf, .nn {
	color: #447fcf;
}

.s, .sa, .sb, .sc, .dl, .sd, .s2, .se, .sh, .si, .sx, .sr, .s1, .ss {
	color: #ed9d13;
}

.m, .mb, .mf, .mh, .mi, .il, .mo {
	color: #3677a9;
}

.ow {
	color: #6ab825;
	font-weight: 500;
}

.c, .ch, .cm, .c1 {
	color: #999;
	font-style: italic;
}

.cs {
	color: #e50808;
	background-color: #520000;
	font-weight: 500;
}

.cp, .cpf {
	color: #cd2828;
	font-weight: 500;
}

.gd, .gr {
	color: #d22323;
}

.ge {
	font-style: italic;
}

.gh, .gu, .nd, .na, .ne {
	color: #ffa500;
	font-weight: 500;
}

.gi {
	color: #589819;
}

.go {
	color: #ccc;
}

.gp {
	color: #aaa;
}

.gs {
	font-weight: 500;
}

.gt {
	color: #d22323;
}

.w {
	color: #666;
}

.hljs-string {
	color: #6ab825;
}

.hljs-attr {
	color: #ed9d13;
}

.p .hljs-attr {
	color: var(--light);
}

.pre_wrap {
	white-space: pre-wrap;
	white-space: -moz-pre-wrap;
	white-space: -pre-wrap;
	white-space: -o-pre-wrap;
	word-wrap: break-word;
}

.pre_nolines.ln {
	display: none;
}
.icon {
  width: 1.2rem;
  height: 1.2rem;
  margin: 0 0.5rem;
}

.panel_box {
	display: inline-flex;
	perspective: 300px;
	grid-gap: 0.5rem;
	transition: opacity 0.3s var(--easing);
	background: var(--code-bg);
	padding: 0.5rem 1.5rem;
	border-radius: 2rem;
	align-items: center;
	position: absolute;
	right: 0rem;
	top: -2.1rem;
	opacity: 0;
}

.panel_icon {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	padding: 0.1rem;
	transform-origin: 50% 50%;
}

.panel_icon.active {
	animation: pulse 0.1s linear;
}

.panel_icon svg {
	fill: var(--text);
	width: 1.5rem;
	height: 1.5rem;
}

.panel_hide {
	display: none;
}

.panel_from {
	position: absolute;
	color: var(--theme);
	bottom: 0;
	font-size: 1.5rem;
	font-weight: 500;
	padding: 0.5rem 0;
	cursor: pointer;
	letter-spacing: 0.1px;
	z-index: 19;
}

.panel_expanded .panel_from {
	display: none;
}

